# smart_tuter_monorepo

./: .gitignore
backend/: main.py  pyproject.toml
chatlog/: アプリ開発手順案_20230401.md
frontend/smart_tutor/: README.md  pubspec.yaml
frontend/smart_tutor/android/app/: build.gradle
frontend/smart_tutor/android/app/src/main/: AndroidManifest.xml
frontend/smart_tutor/android/app/src/main/kotlin/com/example/smart_tutor/: MainActivity.kt
frontend/smart_tutor/android/app/src/profile/: AndroidManifest.xml
frontend/smart_tutor/ios/Runner/: Info.plist
frontend/smart_tutor/ios/Runner.xcodeproj/: project.pbxproj
frontend/smart_tutor/linux/: CMakeLists.txt  my_application.cc
frontend/smart_tutor/macos/Runner.xcodeproj/: project.pbxproj
frontend/smart_tutor/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/smart_tutor/macos/Runner/Configs/: AppInfo.xcconfig
frontend/smart_tutor/test/: widget_test.dart
frontend/smart_tutor/web/: index.html  manifest.json
frontend/smart_tutor/windows/: CMakeLists.txt
frontend/smart_tutor/windows/runner/: Runner.rc  main.cpp
