[tool.poetry]
name = "smart_tutor_backend"
version = "0.1.0"
description = ""
authors = ["wdkt8622 <wadakatsu8622@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
flake8 = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
